Dotted border on image edit (bug on firefox though)

--- a/css/profile.css
+++ b/css/profile.css
@@ -484,8 +484,7 @@ p.settingsExplain {
 }
 
 .editableContent {
-    border-top: 1px dashed #666;
-    border-bottom: 1px dashed #666;
+    border: 1px dashed #666;
     background-color: #fff;
     box-sizing:border-box;
     -moz-box-sizing:border-box;
